# task-todos

./: .gitignore  CHANGES.md  pyproject.toml  pysidedeploy.spec
.github/workflows/: pyside-deploy.yml
app/: config.py  main.py  models.py
app/controllers/: sort_filter.py  tasks.py
app/ui/: add_task_dialog.py  main.py
pyside6_ui/: add_task_dialog.ui  main.ui
scripts/: generate-client-ui.py
