[project]
name = "task-todos"
version = "0.1.0"
description = "Simple To-Do application for desktop."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyside6>=6.9.1",
]

[dependency-groups]
build = [
    "pip>=25.1.1",
]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "ruff>=0.12.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "B", "S"]
ignore = ["S101", "B011", "E501", "UP046", "UP007", "S110"]
